<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logonActivity">


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />
    </TableRow>

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tableRow"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/word_to_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/projectground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <EditText
            android:id="@+id/edit_logon_name"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/img_misktake1"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hi_name"
            android:inputType="textPersonName"
            tools:ignore="MissingPrefix,SpeakableTextPresentCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/img_misktake1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="14dp"
            app:srcCompat="@drawable/mistake"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/projectground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_to_search"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/edit_logon_pwd"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/img_misktake2"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hi_pwd"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            tools:ignore="MissingPrefix,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/img_misktake2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/mistake"
            tools:ignore="ContentDescription,ImageContrastCheck,ImageContrastCheck" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/check_logon_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/hi_xieyi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <Button
        android:id="@+id/btn_logon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/signground"
        android:text="@string/hi_logn"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_logon_box"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_sign"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logon"
        app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>