<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.mypage.MyFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="#46BDFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.hi.tool.ImageRound
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/head_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="0dp"
            android:text="@string/my_txt_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/head_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:text="@string/my_txt_id"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/wordback"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_txt_word"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/my_txt_word"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_txt_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_txt_data"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/my_txt_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_txt_data_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/relativeground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                tools:ignore="DuplicateIds">

                <LinearLayout
                    android:id="@+id/linear_online"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="DuplicateIds">

                    <ImageView
                        android:id="@+id/my_img_serach1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/search_blue"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/my_img_serach2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/my_txt_search"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/my_img_serach3"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/right_arrows"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_Search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/my_img_help1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/help"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/my_img_help2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/my_txt_help"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/my_img_help3"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/right_arrows"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout10"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/relativeground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/my_img_learn1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/learn"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/my_img_learn2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/my_txt_word_number"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/my_img_learn3"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/right_arrows"
                        tools:ignore="ContentDescription,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_zang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/my_img_like1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/like"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/my_img_like2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="给云团好评"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/my_img_like3"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/right_arrows"
                        tools:ignore="ContentDescription,RtlHardcoded,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_out"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/my_img_cancel1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"

                        android:src="@drawable/cancel"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/my_img_cancel2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="退出登录"
                        android:textSize="18sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/my_img_cancel3"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/right_arrows"
                        tools:ignore="ContentDescription,RtlHardcoded,ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>