<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_word">

    <fragment
        android:id="@+id/navigation_word"
        android:name="com.example.hi.ui.wordpage.WordFragment"
        android:label="@string/title_word"
        tools:layout="@layout/fragment_word" >
        <action
            android:id="@+id/action_navigation_word_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_word_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_word_to_informFragment"
            app:destination="@id/informFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collect"
        android:name="com.example.hi.ui.collectpage.CollectFragment"
        android:label="@string/title_collect"
        tools:layout="@layout/fragment_collect" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.hi.ui.mypage.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" >
        <action
            android:id="@+id/action_navigation_my_to_helpFragment"
            app:destination="@id/helpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_my_to_readFragment"
            app:destination="@id/readFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.hi.ui.wordpage.detailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_navigation_word"
            app:destination="@id/navigation_word"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.hi.ui.mypage.helpFragment"
        android:label="fragment_help"
        tools:layout="@layout/fragment_help" >
        <action
            android:id="@+id/action_helpFragment_to_navigation_my"
            app:destination="@id/navigation_my"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_helpFragment_to_help_detail_Fragment"
            app:destination="@id/help_detail_Fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/help_detail_Fragment"
        android:name="com.example.hi.ui.mypage.help_detail_Fragment"
        android:label="fragment_help_detail_"
        tools:layout="@layout/fragment_help_detail_" >
        <action
            android:id="@+id/action_help_detail_Fragment_to_helpFragment"
            app:destination="@id/helpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/readFragment"
        android:name="com.example.hi.ui.mypage.readFragment"
        android:label="fragment_read"
        tools:layout="@layout/fragment_read" >
        <action
            android:id="@+id/action_readFragment_to_navigation_my"
            app:destination="@id/navigation_my"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.hi.ui.wordpage.searchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_navigation_word"
            app:destination="@id/navigation_word" />
    </fragment>
    <fragment
        android:id="@+id/informFragment"
        android:name="com.example.hi.ui.wordpage.InformFragment"
        android:label="fragment_inform"
        tools:layout="@layout/fragment_inform" >
        <action
            android:id="@+id/action_informFragment_to_navigation_word"
            app:destination="@id/navigation_word"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>